another small tweak to fix field alignment

--- a/themes/nudev/src/__PRECOMP/sass/404.scss
+++ b/themes/nudev/src/__PRECOMP/sass/404.scss
@@ -25,7 +25,7 @@ div.nu__searchbar-container{
     text-align: left;
     & > div{
       position: relative;
-      width: 97%;
+      width: 100%;
       margin: 0 auto 0 auto;
       display: flex;
       flex-direction: row;
